--- a/day4/new.html
+++ b/day4/new.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   
     
-    <script  src="./tut1.js"> </script>
+    <script src="./07calculator.js"></script>
 </body>
 </html>
