--- a/day5/new.html
+++ b/day5/new.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-   
-    
-    <script  src="./tut1.js"> </script>
+    <button id="root" ondblclick="document.getElementById('root').innerHTML= Date()"> click me</button>
+
+    <script src="./new.js"> </script>
 </body>
 </html>
